--- a/awesomedialoglib/build.gradle
+++ b/awesomedialoglib/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:28.0.0'
     testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
